<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".views.MainActivityView">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <EditText
                    android:id="@+id/main_activity_search_place_name"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/main_activity_venue_search" />

                <EditText
                    android:id="@+id/main_activity_search_place_where"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/main_activity_location_search" />

            </LinearLayout>

            <Button
                android:id="@+id/main_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/main_activity_search_button"
                android:textAllCaps="true" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/main_activity_searched_venue_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/main_activity_results_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <!-- Searched Venue -->
            <LinearLayout
                android:id="@+id/main_activity_searched_venue_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <include
                    android:id="@+id/main_activity_searched_venue"
                    layout="@layout/venue_list_item"
                    android:layout_height="70dp"
                    android:layout_width="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>



            <!-- Other venues section -->
            <LinearLayout
                android:id="@+id/main_activity_other_venues_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/main_activity_list_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_venues_other_label"
                    android:textColor="@color/black"/>

                <ProgressBar
                    android:id="@+id/main_activity_other_venues_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/main_venues_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/main_activity_list_no_results_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/main_no_recommended_venues"
                    android:textSize="15dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/main_activity_no_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:text="@string/main_no_results_venues"
            android:textSize="15dp"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
